# databricks-lakeflow-pipelines-tmp

./: README.md
dlt_migration_tool/: .gitignore  README.md  README_WORKDAY.md  USER_GUIDE.md  clean.sh  enhancement_plan.md  pyproject.toml  run_tool.sh
dlt_migration_tool/docs/: project_structure.md
dlt_migration_tool/samples/input/: a_locations_maximo_onboarding.json  a_pmsequence_maximo_onboarding.json  silver_transformations_sample.json
dlt_migration_tool/src/dlt_migration_tool/: __init__.py  __main__.py  cli.py  schema_extractor.py
dlt_migration_tool/src/dlt_migration_tool/audit/: __init__.py  audit_extract_schema.py  audit_finalize.py  audit_framework.py  audit_process_input.py  audit_utils.py
dlt_migration_tool/src/dlt_migration_tool/core/: __init__.py  transformer.py
dlt_migration_tool/src/dlt_migration_tool/mapping/: __init__.py  mapping_engine.py
dlt_migration_tool/src/dlt_migration_tool/notebooks/: dlt_migration_tool_audit_queries.py  dlt_migration_tool_notebook.py  dlt_migration_tool_notebook_maximo_uc.py  dlt_migration_tool_notebook_workday_uc.py  imports.py  schema_extractor.py  schema_validator_notebook.py  select_exp_updater_notebook.py  utilities.py  workday_manual_upload_commands.py
dlt_migration_tool/src/dlt_validation_framework/: README.md  __init__.py  bootstrap.py  config.py  custom_table_validation.py  dlt_validation_demo.py  main.py  run_validation.py  scheduled_validation.py  utils.py  validation.py
dlt_migration_tool/tests/integration/: test_integration.py
dlt_migration_tool/tests/unit/: test_config_transformer.py  test_schema_validator.py
(+209 files in other folders)
